	  sell some finished tools and buy items for emeralds.
	  Emerald can now be treated as a distinct resource with its
	  own purpose, rather than an medium for shortcuts around
	  existing gameplay.

	- Dung can be stewed into blocks similar to string to wool.

	- Fixed Soul Press fire creation.

	- Made animal cross-breeding habitats easier to construct.


v0.19
	- Added cross-breeding of animals.  Chances of rarer animals
	  are influenced by (and require) a suitable environment.

	- It is now theoretically possible to access most of the tech
	  tree in a Classic Superflat Challenge map, whereas without
	  the ability to tan leather, players were stuck on Tier 2
	  without being able to make sawmills.

	- Nerf plant cross-breeding rates.

	- Some new sound effects.


v0.18
	- Plant cross-breeding is now more of a science than
	  just blind luck.  The species of plants/fungi you
	  breed will depend on the donor species surrounding
	  them.

	- Plants that differ by metadata but not block ID,
	  such as saplings, are now correctly recognized by
	  the cross-breeding system as different species.


v0.17
	- Most plants/fungi now obtainable, given dirt,
	  bonemeal, and a hoe.  Plants and fungi exposed to
	  other species will spread mutant strains into nearby
	  fertile spaces.

	- Dead shrubs are now renewable: boil the leaves off
	  an oak sapling.


v0.16
	- Lava source blocks are now renewable.  Lava will
	  melt nearby blocks of hellfire.

	- Lilypads can now grow on the highest level of flowing
	  water, as well as source blocks, so lilypad farming
	  will work with HCB even when water is extremely scarce.

	- Lilypad growth rate is now dependent on actual immediate
	  light level, even though they will remain in place as
	  long as they have a view of the sky.

	- Restored old pre-v0.12 heat logic for dirt/clay
	  farms, to be consistent with BTW pattern of using
	  a 3x3 fire source for max efficiency.

	- Improvements to clay/dirt farming SFX.
